Update to the site with added sponsors etc

--- a/src/components/Sponsors/sponsors.scss
+++ b/src/components/Sponsors/sponsors.scss
@@ -44,3 +44,9 @@
     0% { transform: translateY(0); }
     100% { transform: translateY(-20px); }
   }
+  .sponsor_button_strip{
+    display:flex;
+    justify-content: space-around;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
